Facturas terminadas - trabajos terminados, formato

--- a/src/app/icon-index/icon-index.component.html
+++ b/src/app/icon-index/icon-index.component.html
@@ -7,11 +7,11 @@
         <fa-icon [icon]="materialIcon" size="6x"></fa-icon>
     </button>
     
-    <button class="button-class blue" routerLink="/">
+    <button class="button-class blue" routerLink="/trabajos">
         <fa-icon [icon]="providersIcon" size="6x"></fa-icon>
     </button>
     
-    <button class="button-class pink" routerLink="/trabajos">
+    <button class="button-class pink" routerLink="/facturas">
         <fa-icon [icon]="worksIcon" size="6x"></fa-icon>
     </button>
 </div>
